# face-recognition-security

./: CMakeLists.txt  README.md
include/: esp32_notifier.h  face_detector.h  face_recognizer.h
src/: esp32_notifier.cpp  face_detector.cpp  face_recognizer.cpp  main.cpp
